samples/_failures_safe/1761722378_d11b13_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9dea721e.c: In function ‘main’:
./samples/SAFE/__tmp_9dea721e.c:177: error: expected ‘}’ at end of input
./samples/SAFE/__tmp_9dea721e.c:176:9: note: to match this ‘{’
  176 |         {EVENT_PROCESS_COMPLETE, "", 0
      |         ^
./samples/SAFE/__tmp_9dea721e.c:176:9: error: expected declaration or statement at end of input
